timer side bar fixed alignment

--- a/docs/css/listToDo.css
+++ b/docs/css/listToDo.css
@@ -1,3 +1,7 @@
+* {
+  font-family: 'Roboto', sans-serif;
+}
+
 .modal {
     position: fixed;
     display: none;
@@ -50,7 +54,7 @@
 }
 
 .header__btn_Add {
-    padding: 0px 12px;
+    padding: 0px 10px;
     color: #555;
     text-align: center;
     font-size: 30px;
