--- a/docs/css/map.css
+++ b/docs/css/map.css
@@ -1,3 +1,7 @@
+* {
+    font-family: 'Roboto', sans-serif;
+}
+
 body {
     background-color: #64B6AC;
     padding: 0;
