--- a/docs/css/timer.css
+++ b/docs/css/timer.css
@@ -1,3 +1,7 @@
+* {
+    font-family: 'Roboto', sans-serif;
+}
+
 .Timer__banner p {
     text-align: center;
     font-size: 50px;
@@ -21,13 +25,4 @@
     display: inline-block;
     text-align: center;
   }
-
-ul {
-    margin: 0;
-    padding: 0;
-    list-style-type: none;    
-}
-
-li {
-    text-align: center;
-}
+;
